[package]
name = "ev3-shuffl3bot"
version = "0.1.0"
authors = ["Josh Guilfoyle <jasta@devtcg.org>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
rand = "0.8.5"
ev3dev-lang-rust = "0.12.0"
ev3dev-lang-rust-derive = "0.10.0"
anyhow = "1.0.57"
futures = "0.3.21"
futures-signals = "0.3.25"
tokio = { version = "1.18.2", features = [ "time", "rt", "macros", "sync", "test-util" ] }
thiserror = "1.0.31"
derive-new = "0.5.9"
state_machine = { path = "state_machine" }
piston-ai_behavior = "0.33.0"
pistoncore-input = "1.0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.81"