[package]
name = "state_machine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = [ "time", "rt", "macros", "sync", "test-util" ] }
anyhow = "1.0.44"
